# YACC-Launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js
src/: App.svelte  app.postcss  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  main.rs  utils.rs
src-tauri/src/yacc/: install.rs  mod.rs
src/components/: TitleBar.svelte
src/pages/: Changelog.svelte  Play.svelte  Settings.svelte
src/stores/: stores.ts
src/utils/: GameInstall.ts  InstallType.ts  YaccState.ts
