[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Keeps line tables in built binary
# c.f.: https://doc.rust-lang.org/cargo/reference/profiles.html#debug
# This is done to see line numbers in stack trace on sentry.io
debug = 1

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
# Sentry (crash) logging
sentry = "0.31.5"
sentry-log = "0.31.5"
# Find steam games
steamlocate = "1.2"
# Persistent store for settings
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "5a6abd3203dc94c38f96d0c4bf7ecbef399f8c25" }
# Error messages
anyhow = "1.0"
# zip stuff
zip = "0.6.2"
# Regex
regex = "1.6.0"
# Read out running application process names
sysinfo = "0.29.2"
# HTTP requests
reqwest = { version = "0.11", features = ["blocking"] }
# JSON5 parsing support (allows comments in JSON)
json5 = "0.4.1"
# Async recursion for recursive mod install
async-recursion = "1.0.0"
# Game scanner
# Use specific commit that updates deprecated library
game-scanner = { git = "https://github.com/EqualGames/game-scanner.git", rev = "94dcbd086a5987361a2847988a060da9b5dd3908" }
# For parsing timestamps
chrono = "0.4.23"
# TypeScript bindings
ts-rs = "6.1"
# const formatting
const_format = "0.2.30"
# Logging libraries
pretty_env_logger = "0.5.0"
log = "0.4.17"
# Extracting zip files easily
zip-extract = "0.1.2"
# open urls
open = "5.0.0"
# Windows API stuff
winapi = "0.3.9"
semver = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
